[gd_scene load_steps=21 format=3 uid="uid://fgu2b5rv05ei"]

[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="1_otph4"]
[ext_resource type="Script" uid="uid://um7o8k4vm6kp" path="res://src/firearm/ammo_stack.gd" id="2_3m7rv"]
[ext_resource type="PackedScene" uid="uid://b48vvx3ot0dxf" path="res://src/firearm/30cal.glb" id="3_j2ag3"]
[ext_resource type="Script" uid="uid://cqspofftpl2bp" path="res://src/firearm/ammo_belt_part.gd" id="4_htttl"]
[ext_resource type="PackedScene" uid="uid://c25yxb0vt53vc" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_left.tscn" id="4_jmq7e"]
[ext_resource type="Script" uid="uid://dft3wdjnw7ggp" path="res://addons/godot-xr-tools/interactables/interactable_handle.gd" id="4_y1s6p"]
[ext_resource type="Animation" uid="uid://plad1r85f7ws" path="res://addons/godot-xr-tools/hands/animations/left/Grip.res" id="5_htttl"]
[ext_resource type="Script" uid="uid://krob44m8t54b" path="res://addons/godot-xr-tools/hands/poses/hand_pose_settings.gd" id="6_um6gu"]
[ext_resource type="PackedScene" uid="uid://ctw7nbntd5pcj" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_right.tscn" id="7_r3vno"]
[ext_resource type="Animation" uid="uid://ccds2u22gbxn7" path="res://addons/godot-xr-tools/hands/animations/right/Grip.res" id="8_qqec0"]
[ext_resource type="PackedScene" uid="uid://ca3daqmpo0tua" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_redirect.tscn" id="10_no8tx"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_htttl"]
rough = true
absorbent = true

[sub_resource type="BoxShape3D" id="BoxShape3D_otph4"]
size = Vector3(0.224365, 0.1427, 0.0893555)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3m7rv"]
albedo_color = Color(0.00188723, 0.141003, 0.0361646, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j2ag3"]
albedo_color = Color(0.972208, 0.796747, 0, 1)

[sub_resource type="TextMesh" id="TextMesh_y1s6p"]
material = SubResource("StandardMaterial3D_j2ag3")
text = "US ARMY
.30 CAL"
font_size = 4
depth = 0.005

[sub_resource type="Curve3D" id="Curve3D_otph4"]
bake_interval = 0.01
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0.1, 0, 0, 0, 0, 0, 0, 0, 0, -0.1, 0.001, 0, 0, 0, 0, 0, 0, 0, -0.1, 0.02, 0, 0, 0, 0, 0, 0, 0, 0.1, 0.02, 0, 0, 0, 0, 0, 0, 0, 0.1, 0.04, 0, 0, 0, 0, 0, 0, 0, -0.1, 0.04, 0, 0, 0, 0, 0, 0, 0, -0.1, 0.06, 0, 0, 0, 0, 0, 0, 0, 0.1, 0.06, 0, 0, 0, 0, 0, 0, 0, 0.1, 0.08, 0, 0, 0, 0, 0, 0, 0, -0.1, 0.08, 0, 0, 0, 0, 0, 0, 0, -0.1, 0.1, 0, 0, 0, 0, 0, 0, 0, 0.1, 0.1, 0, 0, 0, 0, 0, 0, 0, 0.1, 0.12, 0, 0, 0, 0, 0, 0, 0, -0.1, 0.12, 0.003, 0, 0, 0, 0, 0, 0, -0.1, 0.14, 0, 0, 0, 0, 0, 0, 0, -0.157847, 0.23857, -2.23517e-08, 0, 0, 0, 0, 0, 0, -0.334907, 0.246963, 0.00232208),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.375, 0.22, 0.145)
}
point_count = 17

[sub_resource type="Resource" id="Resource_48qw3"]
script = ExtResource("6_um6gu")
open_pose = ExtResource("5_htttl")
closed_pose = ExtResource("5_htttl")
metadata/_custom_type_script = "uid://krob44m8t54b"

[sub_resource type="Resource" id="Resource_dbr5h"]
script = ExtResource("6_um6gu")
open_pose = ExtResource("8_qqec0")
closed_pose = ExtResource("8_qqec0")
metadata/_custom_type_script = "uid://krob44m8t54b"

[sub_resource type="SphereShape3D" id="SphereShape3D_o1cb5"]
radius = 0.0789475

[node name="AmmoCan" groups=["AmmoCan30Cal"] instance=ExtResource("1_otph4")]
mass = 6.0
physics_material_override = SubResource("PhysicsMaterial_htttl")
ranged_grab_method = 2

[node name="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.10352e-05, 0.00170898)
shape = SubResource("BoxShape3D_otph4")

[node name="CSGBox3D" type="CSGBox3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00026156, -0.000534803, 0.00133766)
size = Vector3(0.222656, 0.142578, 0.0888672)
material = SubResource("StandardMaterial3D_3m7rv")

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGBox3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00537109, 0)
operation = 2
size = Vector3(0.209961, 0.135742, 0.0744629)

[node name="MeshInstance3D" type="MeshInstance3D" parent="CSGBox3D" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00026156, 0.000534803, 0.0420346)
mesh = SubResource("TextMesh_y1s6p")
skeleton = NodePath("../..")

[node name="Path3D" type="Path3D" parent="." index="3"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.00867692, -0.0531517, 0.0352945)
curve = SubResource("Curve3D_otph4")
script = ExtResource("2_3m7rv")
scene = ExtResource("3_j2ag3")
rotation_local = Vector3(29.43, 0, 96)
stack_size = 100
columns = 1
start_offset = 0.238
height_between = 0.013

[node name="Start" type="Marker3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0929583, 0.0917975, 0.0335884)

[node name="End" type="Marker3D" parent="." index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.324036, 0.225246, 0.0335884)

[node name="Belt" type="Node3D" parent="." index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0939689, 0.0989153, 0)
script = ExtResource("4_htttl")

[node name="GrabPointHandLeft" parent="Belt" index="0" instance=ExtResource("4_jmq7e")]
transform = Transform3D(0.229331, 0.897671, -0.376289, -0.968882, 0.247523, 0, 0.0931403, 0.36458, 0.926502, 0.0590163, 0, -0.0634077)
hand_pose = SubResource("Resource_48qw3")

[node name="GrabPointHandRight" parent="Belt" index="1" instance=ExtResource("7_r3vno")]
transform = Transform3D(0.0432711, -0.770822, -0.63558, 0.954819, 0.219132, -0.200754, 0.294021, -0.598177, 0.745477, 0.0371834, 0.0153024, -0.0640094)
hand_pose = SubResource("Resource_dbr5h")

[node name="XRToolsInteractableHandle" type="RigidBody3D" parent="Belt" index="2"]
collision_layer = 262144
collision_mask = 0
freeze = true
script = ExtResource("4_y1s6p")
enabled = false
metadata/_custom_type_script = "uid://dft3wdjnw7ggp"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Belt/XRToolsInteractableHandle" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0331041)
shape = SubResource("SphereShape3D_o1cb5")

[node name="GPRRight" parent="Belt/XRToolsInteractableHandle" index="1" node_paths=PackedStringArray("target") instance=ExtResource("10_no8tx")]
target = NodePath("../../GrabPointHandRight")

[node name="GPRLeft" parent="Belt/XRToolsInteractableHandle" index="2" node_paths=PackedStringArray("target") instance=ExtResource("10_no8tx")]
target = NodePath("../../GrabPointHandLeft")

[node name="GrabPointHandLeft" parent="." index="7" instance=ExtResource("4_jmq7e")]
transform = Transform3D(0.735707, 0, -0.6773, 0, 1, 0, 0.6773, 0, 0.735707, -0.0343704, 0, -0.0299111)

[node name="GrabPointHandRight" parent="." index="8" instance=ExtResource("7_r3vno")]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0.0348549, 0, -0.0167947)

[connection signal="grabbed" from="." to="Belt" method="_on_ammo_can_grabbed"]
[connection signal="dropped" from="Belt/XRToolsInteractableHandle" to="Belt" method="_on_handle_dropped"]
[connection signal="grabbed" from="Belt/XRToolsInteractableHandle" to="Belt" method="_on_handle_grabbed"]
